--- a/solar_system.html
+++ b/solar_system.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - geometry - cube</title>
+		<title>Solar System</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -23,9 +23,6 @@
 			let RADIUS_MULTIPLIER_MARS = 0.004866861;
 			let RADIUS_MULTIPLIER_MERCURY = 0.003502589
 			let RADIUS_MULPIPLIER_EARTH = 0.00914924;
-
-
-			
 
 			var camera, scene, renderer;
 			var mesh;
