added solar system facts

--- a/solar_system.html
+++ b/solar_system.html
@@ -8,5 +8,17 @@
 	</head>
 	<body>
 		<script type="module" src="js/main.js"></script>
+		<div id="information">Solar System facts:
+			<li>The distance between Jupiter and Venus is only slightly larger than the distance between Jupiter and Saturn.</li>
+			<li>Jupiter is closer to Earth than to Saturn.</li>
+			<li>Jupiter can fit all of the other planets inside it</li>
+			<li>Neptune takes 165 years to orbit around the sun</li>
+			<li>Mercury and Venus are the only planets in the Solar System without moons</li>
+			<li>Neptune winds can reach 1600 km/h</li>
+			<li>The average temperature in Venus is 467C</li>
+			<li>Mercury day side can reach 427C and the night side can reach -173C</li>
+			<li>Mercury takes longer to spin around its axis than to spin around the sun. A day in Mercury is longer than a year.</li>
+		</div>
+		
 	</body>
 </html>
